--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JC Integra Soluções</title>
+  <title>Minha Página Profissional</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800">
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header class="bg-blue-600 text-white p-6">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-xl font-bold">JC Integra Soluções</h1>
+      <h1 class="text-xl font-bold">Seu Nome</h1>
       <nav class="space-x-4">
         <a href="#sobre" class="hover:underline">Sobre</a>
         <a href="#servicos" class="hover:underline">Serviços</a>
@@ -57,8 +57,8 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <div class="bg-white p-4 rounded shadow">
           <img src="assets/imagens/template1.jpg" alt="Template 1" class="mb-4 rounded">
-          <h3 class="font-semibold text-lg">Templates</h3>
-          <p class="text-gray-600 mb-2">Ideal para freelancers criativos, encontre aqui templates que vão impulsionar seu negócio!</p>
+          <h3 class="font-semibold text-lg">Template Portfólio</h3>
+          <p class="text-gray-600 mb-2">Ideal para freelancers criativos.</p>
           <a href="#" class="text-blue-600 hover:underline">Ver mais</a>
         </div>
         <div class="bg-white p-4 rounded shadow">
@@ -83,7 +83,7 @@
 
   <!-- Rodapé -->
   <footer class="bg-gray-800 text-white text-center py-6">
-    <p>&copy; 2025 - Jc Integra Soluções. Todos os direitos reservados.</p>
+    <p>&copy; 2025 - Seu Nome. Todos os direitos reservados.</p>
   </footer>
 
 </body>
