--- a/index.html
+++ b/index.html
@@ -3,29 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Minha Página Profissional</title>
+  <meta name="description" content="Soluções digitais modernas com sites, templates e suporte técnico personalizado.">
+  <title>JC Integra Soluções</title>
+
+  <!-- Swiper CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-white text-gray-800">
 
   <!-- Header -->
-  <header class="bg-blue-600 text-white p-6">
-    <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-xl font-bold">Seu Nome</h1>
-      <nav class="space-x-4">
-        <a href="#sobre" class="hover:underline">Sobre</a>
-        <a href="#servicos" class="hover:underline">Serviços</a>
-        <a href="#produtos" class="hover:underline">Produtos</a>
-        <a href="#contato" class="hover:underline">Contato</a>
+  <header class="relative bg-black text-white py-4 px-6">
+    <div class="w-full flex items-center justify-between relative">
+
+      <!-- Logo -->
+      <div class="flex items-center space-x-3">
+        <img src="/assets/logo.png" alt="Logo da JC Integra Soluções" class="w-10 h-10 rounded-md object-cover">
+        <h1 class="text-xl font-bold">JC Integra Soluções</h1>
+      </div>
+
+      <!-- Menu Centralizado -->
+      <nav class="absolute left-1/2 transform -translate-x-1/2 space-x-6">
+        <a href="#sobre" class="hover:text-orange-600 hover:underline">Sobre</a>
+        <a href="#servicos" class="hover:text-orange-600 hover:underline">Serviços</a>
+        <a href="#produtos" class="hover:text-orange-600 hover:underline">Produtos</a>
+        <a href="#contato" class="hover:text-orange-600 hover:underline">Contato</a>
       </nav>
+
+      <!-- Botão de contato -->
+      <div>
+        <a href="#contato" class="bg-orange-500 hover:bg-orange-700 text-white px-4 py-2 rounded-md font-bold shadow">Contato</a>
+      </div>
     </div>
   </header>
 
-  <!-- Sobre mim -->
+  <!-- Hero / Destaque -->
+  <section class="bg-white py-20 px-6 text-center">
+    <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center justify-between gap-8">
+
+      <div class="md:w-1/2 text-center md:text-left">
+        <h1 class="text-4xl md:text-6xl font-extrabold text-gray-900 leading-tight mb-6">
+          Transforme sua presença digital com soluções inovadoras
+        </h1>
+        <p class="text-2xl text-gray-700 mb-8">
+          Sites modernos, templates criativos e suporte técnico para impulsionar o seu negócio online.
+        </p>
+
+        <div class="flex justify-center md:justify-start gap-4 flex-wrap">
+          <a href="#contato" class="bg-orange-600 text-white font-semibold px-6 py-3 rounded-md hover:bg-orange-700 transition duration-300">Solicitar Orçamento</a>
+          <a href="#produtos" class="bg-orange-600 text-white font-semibold px-6 py-3 rounded-md hover:bg-orange-700 transition duration-300">Veja nossos Produtos Digitais</a>
+        </div>
+      </div>
+
+      <div class="md:w-1/2">
+        <img src="assets/template/hero-img.png" alt="Ilustração representando presença digital" class="w-full h-auto rounded-lg shadow-md">
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Sobre Nós -->
   <section id="sobre" class="py-12 px-6 bg-gray-100">
     <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-2xl font-bold mb-4">Sobre mim</h2>
-      <p class="text-gray-700">[Insira aqui um texto sobre quem você é, o que faz, sua missão, visão ou diferencial]</p>
+      <h2 class="text-2xl font-bold mb-4">Sobre nós</h2>
+      <p class="text-gray-700">A JC Integra Soluções tem como objetivo principal unir criatividade e eficiência para suprir as necessidades do seu negócio ou produto.</p>
     </div>
   </section>
 
@@ -52,22 +96,48 @@
 
   <!-- Produtos Digitais -->
   <section id="produtos" class="py-12 px-6 bg-gray-100">
-    <div class="max-w-5xl mx-auto text-center">
-      <h2 class="text-2xl font-bold mb-8">Produtos Digitais</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <div class="bg-white p-4 rounded shadow">
-          <img src="assets/imagens/template1.jpg" alt="Template 1" class="mb-4 rounded">
-          <h3 class="font-semibold text-lg">Template Portfólio</h3>
-          <p class="text-gray-600 mb-2">Ideal para freelancers criativos.</p>
-          <a href="#" class="text-blue-600 hover:underline">Ver mais</a>
+    <div class="max-w-6xl mx-auto">
+      <h2 class="text-3xl font-bold text-center mb-8">Produtos Digitais</h2>
+
+       <div class="swiper relative">
+      <!-- Wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Card 1 -->
+        <div class="swiper-slide bg-white rounded-xl shadow-md p-4">
+          <img src="assets/template/cards/card1.png" alt="Template 1" class="rounded-lg mb-4 w-full object-cover"/>
+          <h3 class="text-orange-600 font-semibold mb-1">Template Criativo</h3>
+          <p class="text-orange-600 font-bold mb-2">Valor</p>
+          <a href="#" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 transition">Ver Mais</a>
         </div>
-        <div class="bg-white p-4 rounded shadow">
-          <img src="assets/imagens/template2.jpg" alt="Template 2" class="mb-4 rounded">
-          <h3 class="font-semibold text-lg">Blog Profissional</h3>
-          <p class="text-gray-600 mb-2">Para escritores, coaches ou marcas pessoais.</p>
-          <a href="#" class="text-blue-600 hover:underline">Ver mais</a>
+
+        <!-- Card 2 -->
+        <div class="swiper-slide bg-white rounded-xl shadow-md p-4">
+          <img src="assets/template/cards/card1.png" alt="Template 2" class="rounded-lg mb-4 w-full object-cover"/>
+          <h3 class="text-orange-600 font-semibold mb-1">Blog Profissional</h3>
+          <p class="text-orange-600 font-bold mb-2">Valor</p>
+          <a href="#" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 transition">Ver Mais</a>
         </div>
-        <!-- Adicione mais produtos conforme desejar -->
+
+        <!-- Card 3 -->
+        <div class="swiper-slide bg-white rounded-xl shadow-md p-4">
+          <img src="assets/template/cards/card1.png" alt="Template 3" class="rounded-lg mb-4 w-full object-cover"/>
+          <h3 class="text-orange-600 font-semibold mb-1">Landing Pages</h3>
+          <p class="text-orange-600 font-bold mb-2">Valor</p>
+          <a href="#" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 transition">Ver Mais</a>
+        </div>
+
+        <!-- Card 4 -->
+        <div class="swiper-slide bg-white rounded-xl shadow-md p-4">
+          <img src="assets/template/cards/card1.png" alt="Template 4" class="rounded-lg mb-4 w-full object-cover"/>
+          <h3 class="text-orange-600 font-semibold mb-1">Template Estático</h3>
+          <p class="text-orange-600 font-bold mb-2">Valor</p>
+          <a href="#" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 transition">Ver Mais</a>
+        </div>
+      </div>
+
+        <!-- Navegação -->
+        <div class="swiper-button-prev text-gray-700"></div>
+        <div class="swiper-button-next text-gray-700"></div>
       </div>
     </div>
   </section>
@@ -76,15 +146,37 @@
   <section id="contato" class="py-12 px-6">
     <div class="max-w-xl mx-auto text-center">
       <h2 class="text-2xl font-bold mb-6">Entre em Contato</h2>
-      <p class="mb-4">Use o formulário abaixo ou me envie uma mensagem direta no WhatsApp.</p>
-      <a href="https://wa.me/seunumero" target="_blank" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Fale comigo no WhatsApp</a>
+      <p class="mb-4">Use o formulário abaixo ou envie uma mensagem direta no WhatsApp.</p>
+      <a href="https://wa.me/seunumero" target="_blank" rel="noopener noreferrer" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Fale comigo no WhatsApp</a>
     </div>
   </section>
 
   <!-- Rodapé -->
   <footer class="bg-gray-800 text-white text-center py-6">
-    <p>&copy; 2025 - Seu Nome. Todos os direitos reservados.</p>
+    <p>&copy; 2025 - JC Integra Soluções. Todos os direitos reservados.</p>
   </footer>
+
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script>
+    const swiper = new Swiper('.swiper', {
+      slidesPerView: 1.2,
+      spaceBetween: 16,
+      breakpoints: {
+        768: {
+          slidesPerView: 2.5,
+        },
+        1024: {
+          slidesPerView: 3.5,
+        },
+      },
+      loop: true,
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+    });
+  </script>
 
 </body>
 </html>
