--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	   <img src="assets/template/serv1.png" alt="Serviço 1" class="mx-auto mb-4 w-20 h-20 object-contain">
           <h3 class="text-lg font-semibold mb-2">Identidade Visual</h3>
           <p class="text-gray-600 mb-4">Criação de logotipo, paleta de cores, fontes e elementos gráficos únicos para a sua marca.</p>
-		  <a href="" class="inline-block px-4 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition"> Solicitar </a>
+		  <a href="" class="inline-block px-4 py-2 bg-orange-600 text-white rounded-full hover:bg-orange-700 transition"> Solicitar </a>
         </div>
 		
 		<!-- Card 2 -->
@@ -92,7 +92,7 @@
 	   <img src="assets/template/serv2.png" alt="Serviço 2" class="mx-auto mb-4 w-20 h-20 object-contain">
           <h3 class="text-lg font-semibold mb-2">Sites & Web</h3>
           <p class="text-gray-600 mb-4">Criação de sites, templates criativos.</p>
-		  <a href="" class="inline-block px-4 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition"> Solicitar </a>
+		  <a href="" class="inline-block px-4 py-2 bg-orange-600 text-white rounded-full hover:bg-orange-700 transition"> Solicitar </a>
 		  <a href="" class="inline-block px-4 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition"> Meu Portfólio </a>
         </div>
 		
@@ -101,7 +101,7 @@
 	   <img src="assets/template/serv3.png" alt="Serviço 3" class="mx-auto mb-4 w-20 h-20 object-contain">
           <h3 class="text-lg font-semibold mb-2">Suporte Técnico Remoto</h3>
           <p class="text-gray-600 mb-4">Atualizações, correções e suporte técnico contínuo.</p>
-		  <a href="" class="inline-block px-4 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition"> Entrar em Contato </a>
+		  <a href="" class="inline-block px-4 py-2 bg-orange-600 text-white rounded-full hover:bg-orange-700 transition"> Entrar em Contato </a>
         </div>
       </div>
     </div>
@@ -120,7 +120,7 @@
           <img src="assets/template/cards/card1.png" alt="Template 1" class="rounded-lg mb-4 w-full object-cover"/>
           <h3 class="text-orange-600 font-semibold mb-1">Template Criativo</h3>
           <p class="text-orange-600 font-bold mb-2">Valor</p>
-          <a href="#" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 transition">Ver Mais</a>
+          <a href="#" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 transition">Ver Mais</a>
         </div>
 
         <!-- Card 2 -->
@@ -128,7 +128,7 @@
           <img src="assets/template/cards/card1.png" alt="Template 2" class="rounded-lg mb-4 w-full object-cover"/>
           <h3 class="text-orange-600 font-semibold mb-1">Blog Profissional</h3>
           <p class="text-orange-600 font-bold mb-2">Valor</p>
-          <a href="#" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 transition">Ver Mais</a>
+          <a href="#" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 transition">Ver Mais</a>
         </div>
 
         <!-- Card 3 -->
@@ -136,7 +136,7 @@
           <img src="assets/template/cards/card1.png" alt="Template 3" class="rounded-lg mb-4 w-full object-cover"/>
           <h3 class="text-orange-600 font-semibold mb-1">Landing Pages</h3>
           <p class="text-orange-600 font-bold mb-2">Valor</p>
-          <a href="#" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 transition">Ver Mais</a>
+          <a href="#" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 transition">Ver Mais</a>
         </div>
 
         <!-- Card 4 -->
@@ -144,7 +144,7 @@
           <img src="assets/template/cards/card1.png" alt="Template 4" class="rounded-lg mb-4 w-full object-cover"/>
           <h3 class="text-orange-600 font-semibold mb-1">Template Estático</h3>
           <p class="text-orange-600 font-bold mb-2">Valor</p>
-          <a href="#" class="inline-block bg-orange-600 text-white px-4 py-2 rounded hover:bg-orange-700 transition">Ver Mais</a>
+          <a href="#" class="inline-block bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700 transition">Ver Mais</a>
         </div>
       </div>
 
